--- a/index.html
+++ b/index.html
@@ -15,15 +15,10 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
             </label>
             <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                <li><a>Item 1</a></li>
-                <li>
-                    <a>Parent</a>
-                    <ul class="p-2">
-                        <li><a>Submenu 1</a></li>
-                        <li><a>Submenu 2</a></li>
-                    </ul>
-                </li>
-                <li><a>Item 3</a></li>
+                <li><a>Home</a></li>
+                <li><a>Transactions</a></li>
+                <li><a>Investments</a></li>
+                <li><a>Transfer Funds</a></li>
             </ul>
         </div>
         <a class="btn btn-ghost text-xl">Final Project</a>
@@ -37,7 +32,7 @@
         </ul>
     </div>
     <div class="navbar-end">
-        <a class="btn">Log Out</a>
+        <a class="btn">Button</a>
     </div>
 </div>
 </body>
