add tailwind cdn back in cause it works for responsiveness, add other page templates

--- a/transactions.html
+++ b/transactions.html
@@ -36,7 +36,7 @@
     </div>
 </div>
 <div>
-    <h1 class="text-3xl font-bold underline flex justify-center">Dashboard</h1>
+    <h1 class="text-3xl font-bold underline flex justify-center">Transactions</h1>
 </div>
 </body>
 </html>
