--- a/transferFunds.html
+++ b/transferFunds.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dim">
+<html lang="en" data-theme="cupcake">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Title</title>
     <link href="./dist/output.css" rel="stylesheet">
 </head>
@@ -14,37 +15,28 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
             </label>
             <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                <li><a>Item 1</a></li>
-                <li>
-                    <a>Parent</a>
-                    <ul class="p-2">
-                        <li><a>Submenu 1</a></li>
-                        <li><a>Submenu 2</a></li>
-                    </ul>
-                </li>
-                <li><a>Item 3</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="transactions.html">Transactions</a></li>
+                <li><a href="investments.html">Investments</a></li>
+                <li><a href="transferFunds.html">Transfer Funds</a></li>
             </ul>
         </div>
-        <a class="btn btn-ghost text-xl">daisyUI</a>
+        <a class="btn btn-ghost text-xl">Final Project</a>
     </div>
     <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
-            <li><a>Item 1</a></li>
-            <li tabindex="0">
-                <details>
-                    <summary>Parent</summary>
-                    <ul class="p-2">
-                        <li><a>Submenu 1</a></li>
-                        <li><a>Submenu 2</a></li>
-                    </ul>
-                </details>
-            </li>
-            <li><a>Item 3</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="transactions.html">Transactions</a></li>
+            <li><a href="investments.html">Investments</a></li>
+            <li><a href="transferFunds.html">Transfer Funds</a></li>
         </ul>
     </div>
     <div class="navbar-end">
-        <a class="btn">Button</a>
+        <a href="signIn.html" class="btn">Log Out</a>
     </div>
+</div>
+<div>
+    <h1 class="text-3xl font-bold underline flex justify-center">Transfer Funds</h1>
 </div>
 </body>
 </html>
