add some styles and visual queues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="cupcake">
+<html lang="en" data-theme="autumn">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -15,7 +15,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
             </label>
             <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="transactions.html">Transactions</a></li>
                 <li><a href="investments.html">Investments</a></li>
                 <li><a href="transferFunds.html">Transfer Funds</a></li>
@@ -25,17 +25,17 @@
     </div>
     <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
-            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
             <li><a href="transactions.html">Transactions</a></li>
             <li><a href="investments.html">Investments</a></li>
             <li><a href="transferFunds.html">Transfer Funds</a></li>
         </ul>
     </div>
     <div class="navbar-end">
-        <a href="signIn.html" class="btn">Log Out</a>
+        <a href="signIn.html" class="btn btn-primary">Log Out</a>
     </div>
 </div>
-<div>
+<div class="bg-base-100">
     <h1 class="text-3xl font-bold underline flex justify-center">Dashboard</h1>
 </div>
 </body>
