--- a/investments.html
+++ b/investments.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="cupcake">
+<html lang="en" data-theme="autumn">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -17,7 +17,7 @@
             <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="transactions.html">Transactions</a></li>
-                <li><a href="investments.html">Investments</a></li>
+                <li><a class="active" href="investments.html">Investments</a></li>
                 <li><a href="transferFunds.html">Transfer Funds</a></li>
             </ul>
         </div>
@@ -27,7 +27,7 @@
         <ul class="menu menu-horizontal px-1">
             <li><a href="index.html">Home</a></li>
             <li><a href="transactions.html">Transactions</a></li>
-            <li><a href="investments.html">Investments</a></li>
+            <li><a class="active" href="investments.html">Investments</a></li>
             <li><a href="transferFunds.html">Transfer Funds</a></li>
         </ul>
     </div>
@@ -35,7 +35,7 @@
         <a href="signIn.html" class="btn">Log Out</a>
     </div>
 </div>
-<div>
+<div class="bg-base-100">
     <h1 class="text-3xl font-bold underline flex justify-center">Investments</h1>
 </div>
 </body>
