--- a/transferFunds.html
+++ b/transferFunds.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="cupcake">
+<html lang="en" data-theme="autumn">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -18,7 +18,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="transactions.html">Transactions</a></li>
                 <li><a href="investments.html">Investments</a></li>
-                <li><a href="transferFunds.html">Transfer Funds</a></li>
+                <li><a class="active" href="transferFunds.html">Transfer Funds</a></li>
             </ul>
         </div>
         <a class="btn btn-ghost text-xl">Final Project</a>
@@ -28,14 +28,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="transactions.html">Transactions</a></li>
             <li><a href="investments.html">Investments</a></li>
-            <li><a href="transferFunds.html">Transfer Funds</a></li>
+            <li><a class="active" href="transferFunds.html">Transfer Funds</a></li>
         </ul>
     </div>
     <div class="navbar-end">
         <a href="signIn.html" class="btn">Log Out</a>
     </div>
 </div>
-<div>
+<div class="bg-base-100">
     <h1 class="text-3xl font-bold underline flex justify-center">Transfer Funds</h1>
 </div>
 </body>
