--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="nord">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Title</title>
     <link href="./dist/output.css" rel="stylesheet">
@@ -12,19 +12,26 @@
     <div class="navbar-start">
         <div class="dropdown">
             <label tabindex="0" class="btn btn-ghost lg:hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                     stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16"/>
+                </svg>
             </label>
-            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow-xl bg-base-100 rounded-box w-52">
+            <ul tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow-xl bg-base-100 rounded-box w-52">
                 <li><a class="bg-gradient-to-r from-red-500 to-black-500 text-white" href="index.html">Home</a></li>
-                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white" href="transactions.html">Transactions</a></li>
-                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white" href="investments.html">Investments</a></li>
-                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white" href="transferFunds.html">Transfer Funds</a></li>
+                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white"
+                       href="transactions.html">Transactions</a></li>
+                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white" href="investments.html">Investments</a>
+                </li>
+                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white"
+                       href="transferFunds.html">Transfer Funds</a></li>
             </ul>
         </div>
         <a class="btn btn-ghost text-xl text-gray-200">First Bank Canada</a>
         <div class="avatar">
             <div class="w-12 border border-gray-600 drop-shadow-lg rounded-full">
-                <img src="assets/FBC_Logo.jpg" />
+                <img src="assets/FBC_Logo.jpg"/>
             </div>
         </div>
     </div>
@@ -38,25 +45,112 @@
     </div>
     <div class="navbar-end">
         <label class="cursor-pointer grid place-items-center px-2">
-            <input type="checkbox" value="dracula" class="toggle theme-controller bg-base-content row-start-1 col-start-1 col-span-2"/>
-            <svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg>
-            <svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+            <input type="checkbox" value="dracula"
+                   class="toggle theme-controller bg-base-content row-start-1 col-start-1 col-span-2"/>
+            <svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
+                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                 stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="5"/>
+                <path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/>
+            </svg>
+            <svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
+                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                 stroke-linecap="round" stroke-linejoin="round">
+                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+            </svg>
         </label>
         <a href="signIn.html" class="btn btn-sm bg-red-700 border-black drop-shadow-lg text-white">Log Out</a>
     </div>
 </div>
-<div class="bg-base-100">
-    <h1 class="text-3xl font-bold underline flex justify-center">Dashboard</h1>
+<!--account info-->
+<div class="flex justify-center bg-base-100 pt-4">
+    <h2 class="text-xl font-bold">Home</h2>
 </div>
-<footer class="footer items-center p-4 bg-slate-900 text-neutral-content fixed bottom-0 left-0 w-full">
+<div class="flex justify-center bg-base-100 pt-4 py-2 px-12 hover:px-6">
+    <div class="w-2/4 h-1/4 stats flex justify-center shadow-xl border rounded-md border-gray-400 bg-base-300">
+        <div class="stats py-4 px-8 bg-base-300">
+            <div class="stat-title font-bold text-black">Chequing Account(s)</div>
+            <div class="stat-desc">2 Accounts</div>
+        </div>
+        <div class="stats py-6 px-8 bg-base-300">
+            <div class="stat-desc flex justify-center">Total</div>
+            <div class="stat-value text-xl">$2,650</div>
+        </div>
+    </div>
+</div>
+<div class="flex justify-center bg-base-100 py-2 px-12 hover:px-6">
+    <div class="w-2/4 h-1/4 stats flex justify-center shadow-xl border rounded-md border-gray-400 bg-base-300">
+        <div class="stats py-4 px-8  bg-base-300">
+            <div class="stat-title font-bold text-black">Credit Account(s)</div>
+            <div class="stat-desc">1 Account</div>
+        </div>
+        <div class="stats py-6 px-8  bg-base-300">
+            <div class="stat-desc flex justify-center">Total</div>
+            <div class="stat-value text-xl">$4,400</div>
+        </div>
+    </div>
+</div>
+<div class="flex justify-center bg-base-100 py-2 px-12 hover:px-6">
+    <div class="w-2/4 h-1/4 stats flex justify-center shadow-xl border rounded-md border-gray-400 bg-base-300">
+        <div class="stats py-4 px-8 bg-base-300">
+            <div class="stat-title font-bold text-black">Investing Account(s)</div>
+            <div class="stat-desc">4 Accounts</div>
+        </div>
+        <div class="stats py-6 px-8 bg-base-300">
+            <div class="stat-desc flex justify-center">Total</div>
+            <div class="stat-value text-xl">$189,400</div>
+        </div>
+    </div>
+</div>
+<!--Spending habits-->
+<div class="grid-cols-3 gap-3 flex justify-center bg-base-100 pt-8 py-24">
+    <div class="card card-compact flex justify-center w-1/4 bg-base-200 shadow-xl border border-gray-300">
+        <div class="card-body flex justify-center">
+            <div class="flex justify-center">
+                <div class="radial-progress" style="--value:30;" role="progressbar">30%</div>
+            </div>
+            <p>You are at 30% of your typical spending</p>
+        </div>
+    </div>
+    <div class="divider divider-horizontal"></div>
+    <div class="card card-compact flex justify-center w-1/4 h-1/4 bg-base-200 shadow-xl border border-gray-300">
+        <div class="card-body">
+            <div class="flex justify-center">
+                <div class="radial-progress" style="--value:60;" role="progressbar">60%</div>
+            </div>
+            <p>You are at 60% of your credit payment goal</p>
+        </div>
+    </div>
+    <div class="divider divider-horizontal"></div>
+    <div class="card card-compact flex justify-center w-1/4 bg-base-200 shadow-xl border border-gray-300">
+        <div class="card-body ">
+            <div class="flex justify-center">
+                <div class="radial-progress" style="--value:87;" role="progressbar">87%</div>
+            </div>
+            <p>You are at 87% of your investment goal</p>
+        </div>
+    </div>
+</div>
+<footer class="footer flex justify-center p-4 bg-slate-900 text-neutral-content fixed bottom-0 left-0 w-full">
     <aside class="items-center grid-flow-col">
         <p>© 2023 INFO3130</p>
     </aside>
     <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
-        <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg>
+        <a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+                <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path>
+            </svg>
         </a>
-        <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
-        <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+        <a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+                <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path>
+            </svg>
+        </a>
+        <a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+                <path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path>
+            </svg>
+        </a>
     </nav>
 </footer>
 </body>
