--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="nord">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css"/>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Title</title>
     <link href="./dist/output.css" rel="stylesheet">
@@ -10,124 +10,48 @@
 <body>
 <div class="navbar bg-gradient-to-r from-red-500 to-red-400">
     <div class="navbar-start">
-        <div class="dropdown">
-            <label tabindex="0" class="btn btn-ghost lg:hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                     stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16"/>
-                </svg>
-            </label>
-            <ul tabindex="0"
-                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow-xl bg-base-100 rounded-box w-52">
-                <li><a class="bg-gradient-to-r from-red-500 to-black-500 text-white" href="index.html">Home</a></li>
-                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white"
-                       href="transactions.html">Transactions</a></li>
-                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white" href="investments.html">Investments</a>
-                </li>
-                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white"
-                       href="transferFunds.html">Transfer Funds</a></li>
-            </ul>
-        </div>
         <a class="btn btn-ghost text-xl text-gray-200">First Bank Canada</a>
         <div class="avatar">
             <div class="w-12 border border-gray-600 drop-shadow-lg rounded-full">
-                <img src="assets/FBC_Logo.jpg"/>
+                <img src="assets/FBC_Logo.jpg"  alt="fbc logo"/>
             </div>
         </div>
-    </div>
-    <div class="navbar-center hidden lg:flex">
-        <ul class="menu menu-horizontal px-2">
-            <li><a class="bg-red-300 text-black" href="index.html">Home</a></li>
-            <li><a class="bg-red-600 text-white" href="transactions.html">Transactions</a></li>
-            <li><a class="bg-red-600 text-white" href="investments.html">Investments</a></li>
-            <li><a class="bg-red-600 text-white" href="transferFunds.html">Transfer Funds</a></li>
-        </ul>
     </div>
     <div class="navbar-end">
         <label class="cursor-pointer grid place-items-center px-2">
-            <input type="checkbox" value="dracula"
-                   class="toggle theme-controller bg-base-content row-start-1 col-start-1 col-span-2"/>
-            <svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
-                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="5"/>
-                <path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/>
-            </svg>
-            <svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
-                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round">
-                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-            </svg>
+            <input type="checkbox" value="dracula" class="toggle theme-controller bg-base-content row-start-1 col-start-1 col-span-2"/>
+            <svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg>
+            <svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
         </label>
-        <a href="signIn.html" class="btn btn-sm bg-red-700 border-black drop-shadow-lg text-white">Log Out</a>
     </div>
 </div>
-<!--account info-->
-<div class="flex justify-center bg-base-100 pt-4">
-    <h2 class="text-xl font-bold">Home</h2>
-</div>
-<div class="flex justify-center bg-base-100 pt-4 py-2 px-12 hover:px-6">
-    <div class="w-2/4 h-1/4 stats flex justify-center shadow-xl border rounded-md border-gray-400 bg-base-300">
-        <div class="stats py-4 px-8 bg-base-300">
-            <div class="stat-title font-bold text-black">Chequing Account(s)</div>
-            <div class="stat-desc">2 Accounts</div>
+<div class="hero pb-20 min-h-screen bg-base-200">
+    <div class="hero-content flex-col lg:flex-row-reverse">
+        <div class="text-center lg:text-left">
+            <h1 class="text-5xl font-bold">Login now!</h1>
+            <p class="py-6">Welcome to First Bank Canada! Your one-stop shop to handle all your banking needs</p>
         </div>
-        <div class="stats py-6 px-8 bg-base-300">
-            <div class="stat-desc flex justify-center">Total</div>
-            <div class="stat-value text-xl">$2,650</div>
-        </div>
-    </div>
-</div>
-<div class="flex justify-center bg-base-100 py-2 px-12 hover:px-6">
-    <div class="w-2/4 h-1/4 stats flex justify-center shadow-xl border rounded-md border-gray-400 bg-base-300">
-        <div class="stats py-4 px-8  bg-base-300">
-            <div class="stat-title font-bold text-black">Credit Account(s)</div>
-            <div class="stat-desc">1 Account</div>
-        </div>
-        <div class="stats py-6 px-8  bg-base-300">
-            <div class="stat-desc flex justify-center">Total</div>
-            <div class="stat-value text-xl">$4,400</div>
-        </div>
-    </div>
-</div>
-<div class="flex justify-center bg-base-100 py-2 px-12 hover:px-6">
-    <div class="w-2/4 h-1/4 stats flex justify-center shadow-xl border rounded-md border-gray-400 bg-base-300">
-        <div class="stats py-4 px-8 bg-base-300">
-            <div class="stat-title font-bold text-black">Investing Account(s)</div>
-            <div class="stat-desc">4 Accounts</div>
-        </div>
-        <div class="stats py-6 px-8 bg-base-300">
-            <div class="stat-desc flex justify-center">Total</div>
-            <div class="stat-value text-xl">$189,400</div>
-        </div>
-    </div>
-</div>
-<!--Spending habits-->
-<div class="grid-cols-3 gap-3 flex justify-center bg-base-100 pt-8 py-24">
-    <div class="card card-compact flex justify-center w-1/4 bg-base-200 shadow-xl border border-gray-300">
-        <div class="card-body flex justify-center">
-            <div class="flex justify-center">
-                <div class="radial-progress" style="--value:30;" role="progressbar">30%</div>
-            </div>
-            <p>You are at 30% of your typical spending</p>
-        </div>
-    </div>
-    <div class="divider divider-horizontal"></div>
-    <div class="card card-compact flex justify-center w-1/4 h-1/4 bg-base-200 shadow-xl border border-gray-300">
-        <div class="card-body">
-            <div class="flex justify-center">
-                <div class="radial-progress" style="--value:60;" role="progressbar">60%</div>
-            </div>
-            <p>You are at 60% of your credit payment goal</p>
-        </div>
-    </div>
-    <div class="divider divider-horizontal"></div>
-    <div class="card card-compact flex justify-center w-1/4 bg-base-200 shadow-xl border border-gray-300">
-        <div class="card-body ">
-            <div class="flex justify-center">
-                <div class="radial-progress" style="--value:87;" role="progressbar">87%</div>
-            </div>
-            <p>You are at 87% of your investment goal</p>
+        <div class="card shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+            <form class="card-body">
+                <div class="form-control">
+                    <label class="label">
+                        <span class="label-text">Username or Access Card</span>
+                    </label>
+                    <input placeholder="username or access card" class="input input-bordered" required />
+                </div>
+                <div class="form-control">
+                    <label class="label">
+                        <span class="label-text">Password</span>
+                    </label>
+                    <input type="password" placeholder="password" class="input input-bordered" required />
+                    <label class="label">
+                        <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
+                    </label>
+                </div>
+                <div class="form-control mt-6">
+                    <a class="btn btn-primary border rounded-xl bg-gradient-to-r from-red-500 to-red-400" href="home.html">Login</a>
+                </div>
+            </form>
         </div>
     </div>
 </div>
