--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Title</title>
+    <title>First Bank Canada</title>
     <link href="./dist/output.css" rel="stylesheet">
 </head>
 <body>
@@ -37,10 +37,10 @@
     </div>
     <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-2">
-            <li><a class="bg-red-300 text-black" href="index.html">Home</a></li>
-            <li><a class="bg-red-600 text-white" href="transactions.html">Transactions</a></li>
-            <li><a class="bg-red-600 text-white" href="investments.html">Investments</a></li>
-            <li><a class="bg-red-600 text-white" href="transferFunds.html">Transfer Funds</a></li>
+            <li class="mx-2"><a class="bg-red-300 text-black" href="index.html">Home</a></li>
+            <li class="mx-2"><a class="bg-red-600 text-white" href="transactions.html">Transactions</a></li>
+            <li class="mx-2"><a class="bg-red-600 text-white" href="investments.html">Investments</a></li>
+            <li class="mx-2"><a class="bg-red-600 text-white" href="transferFunds.html">Transfer Funds</a></li>
         </ul>
     </div>
     <div class="navbar-end">
