transactions page done

--- a/investments.html
+++ b/investments.html
@@ -30,10 +30,10 @@
     </div>
     <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
-            <li><a class="bg-red-600 text-white" href="home.html">Home</a></li>
-            <li><a class="bg-red-600 text-white" href="transactions.html">Transactions</a></li>
-            <li><a class="bg-red-300 text-black" href="investments.html">Investments</a></li>
-            <li><a class="bg-red-600 text-white" href="transferFunds.html">Transfer Funds</a></li>
+            <li class="mx-2"><a class="bg-red-600 text-white" href="home.html">Home</a></li>
+            <li class="mx-2"><a class="bg-red-600 text-white" href="transactions.html">Transactions</a></li>
+            <li class="mx-2"><a class="bg-red-300 text-black" href="investments.html">Investments</a></li>
+            <li class="mx-2"><a class="bg-red-600 text-white" href="transferFunds.html">Transfer Funds</a></li>
         </ul>
     </div>
     <div class="navbar-end">
