--- a/transactions.html
+++ b/transactions.html
@@ -7,7 +7,7 @@
     <title>Title</title>
     <link href="./dist/output.css" rel="stylesheet">
 </head>
-<body>
+<body class="pb-20">
 <div class="navbar bg-gradient-to-r from-red-500 to-red-400">
     <div class="navbar-start">
         <div class="dropdown">
@@ -30,10 +30,10 @@
     </div>
     <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
-            <li><a class="bg-red-600 text-white" href="home.html">Home</a></li>
-            <li><a class="bg-red-300 text-black" href="transactions.html">Transactions</a></li>
-            <li><a class="bg-red-600 text-white" href="investments.html">Investments</a></li>
-            <li><a class="bg-red-600 text-white" href="transferFunds.html">Transfer Funds</a></li>
+            <li class="mx-2"><a class="bg-red-600 text-white" href="home.html">Home</a></li>
+            <li class="mx-2"><a class="bg-red-300 text-black" href="transactions.html">Transactions</a></li>
+            <li class="mx-2"><a class="bg-red-600 text-white" href="investments.html">Investments</a></li>
+            <li class="mx-2"><a class="bg-red-600 text-white" href="transferFunds.html">Transfer Funds</a></li>
         </ul>
     </div>
     <div class="navbar-end">
@@ -46,7 +46,35 @@
     </div>
 </div>
 <div class="bg-base-100">
-    <h1 class="text-3xl font-bold underline flex justify-center">Transactions</h1>
+    <h1 class="text-3xl font-bold flex justify-center pt-20">Transaction History</h1>
+
+        <!--transaction history-->
+    <div class="flex justify-center p-4">
+        <select id="filterMonth" class="p-2 border rounded">
+            <option value="">Select Month</option>
+            <option value="0">January</option>
+            <option value="1">February</option>
+            <option value="2">March</option>
+            <option value="3">April</option>
+            <option value="4">May</option>
+            <option value="5">June</option>
+            <option value="6">July</option>
+            <option value="7">August</option>
+            <option value="8">September</option>
+            <option value="9">October</option>
+            <option value="10">November</option>
+            <option value="11">December</option>
+          </select>
+        <button onclick="filterTransactions()" class="bg-red-600 hover:bg-red-300 text-white p-2 rounded ml-2">Filter</button>
+        <button onclick="resetFilter()" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded ml-2">Remove Filter</button>
+    </div>
+
+    <!-- Transaction List -->
+    <div id="transactionList" class="container mx-auto p-4">
+        
+    </div>
+
+  <script src="transactions.js"></script>
 </div>
 </body>
 <footer class="footer flex justify-center p-4 bg-slate-900 text-neutral-content fixed bottom-0 left-0 w-full">
