--- a/home.html
+++ b/home.html
@@ -131,6 +131,63 @@
         </div>
     </div>
 </div>
+<div class="container mx-auto px-4 mt-8 flex flex-wrap items-center justify-between">
+    <div class="w-full lg:w-1/2 mb-4 lg:mb-0">
+        <div class="lg:mr-8">
+            <h1 class="text-4xl font-bold">Investing Tailored for you</h1>
+            <p class="text-lg text-gray-600">With our comprehensive tools and professional support, Investing is simpler than you think. get started today for a better tomorrow!</p>
+        </div>
+    </div>
+    <div class="w-full lg:w-1/2">
+        <img src="assets/Investment_main.jpg" alt="image of laptop in home, with investment page open" class="rounded shadow-lg">
+    </div>
+</div>
+
+<!--next section -->
+<div class="bg-gray-200 py-8 mt-12">
+    <div class="container mx-auto px-4">
+        <!-- Section Title and Subtitle -->
+        <div class="text-center mb-6">
+            <h2 class="text-3xl font-bold">Invest your way</h2>
+            <p class="text-md text-gray-600">We offer many different tools and options, to support a wide range of different investors. Find what works best for you</p>
+        </div>
+        <div class="container mx-auto px-4 flex justify-center gap-4">
+
+            <div class="max-w-sm w-full bg-white p-4 shadow rounded flex flex-col items-center justify-center">
+                <h3 class="text-xl font-bold">Online tools</h3>
+                <p class="text-md text-gray-600">Use our intuitive tools to invest from home, or just monitor your account</p>
+                <div class="p-5">
+                    <img src="assets/content_box_1.jpg" alt="man banking from home" class="max-w-full h-auto rounded">
+                </div>
+            </div>
+
+            <div class="max-w-sm w-full bg-white p-4 shadow rounded flex flex-col items-center justify-center">
+                <h3 class="text-xl font-bold">Professional support</h3>
+                <p class="text-md text-gray-600">get advice and support from our team of finacial experts</p>
+                <div class="p-5">
+                    <img src="assets/content_box_2.jpg" alt="a computer with two sets of hands, implying one is teaching the other." class="max-w-full h-auto rounded">
+                </div>
+            </div>
+
+
+            <div class="max-w-sm w-full bg-white p-4 shadow rounded flex flex-col items-center justify-center">
+                <h3 class="text-xl font-bold">Full portfolio management</h3>
+                <p class="text-md text-gray-600">we can fully manage your investments if you are looking for a more hands off approach</p>
+                <div class="p-5">
+                    <img src="assets/content_box_3.jpg" alt="a computer with two sets of hands, implying one is teaching the other." class="max-w-full h-auto rounded">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="flex justify-center p-5">
+            <button class="bg-red-600 hover:bg-red-300 text-white font-bold py-2 px-4 rounded">
+                Get Started
+            </button>
+        </div>
+
+    </div>
+</div>
 <footer class="footer flex justify-center p-4 bg-slate-900 text-neutral-content fixed bottom-0 left-0 w-full">
     <aside class="items-center grid-flow-col">
         <p>© 2023 INFO3130</p>
