--- a/investments.html
+++ b/investments.html
@@ -48,7 +48,7 @@
 <div class="flex justify-center bg-base-100 pt-4">
     <h2 class="text-xl font-bold">Investments</h2>
 </div>
-<div class="bg-base-200">
+<div>
     <div class="flex justify-center py-6 px-32">
         <div tabindex="0" class="collapse bg-base-300">
             <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
@@ -136,7 +136,6 @@
             </div>
         </div>
     </div>
-
 </div>
 <footer class="footer flex justify-center p-4 bg-slate-900 text-neutral-content fixed bottom-0 left-0 w-full">
     <aside class="items-center grid-flow-col">
