add balances to the pages

--- a/investments.html
+++ b/investments.html
@@ -47,7 +47,7 @@
     <div class="flex justify-center py-6 px-32">
         <div tabindex="0" class="collapse bg-base-300">
             <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
-                Coinsquare - Investment #2240
+                Coinsquare - Investment #2240    |   Balance: $26,567
             </div>
             <div class="collapse-content">
                 <div class="overflow-y-auto">
@@ -88,7 +88,7 @@
     <div class="flex justify-center py-6 px-32 mb-16">
         <div tabindex="0" class="collapse bg-base-300">
             <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
-                Questrade - Investment #4207
+                Questrade - Investment #4207    |   Balance: $160,756
             </div>
             <div class="collapse-content">
                 <div class="overflow-y-auto">
