--- a/transactions.html
+++ b/transactions.html
@@ -53,7 +53,7 @@
 <div class="flex justify-center py-6 px-32">
     <div tabindex="0" class="collapse bg-base-300">
         <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
-            Checking - #4561
+            Checking - #4561    |   Balance: $1,450
         </div>
         <div class="collapse-content">
             <div class="overflow-y-auto">
@@ -89,7 +89,7 @@
 <div class="flex justify-center py-6 px-32">
     <div tabindex="0" class="collapse bg-base-300">
         <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
-            Checking - #4782
+            Checking - #4782    |   Balance: $1,634
         </div>
         <div class="collapse-content">
             <div class="overflow-y-auto">
@@ -125,7 +125,7 @@
 <div class="flex justify-center py-6 px-32">
     <div tabindex="0" class="collapse bg-base-300">
         <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
-            Credit - #6721
+            Credit - #6721    |   Balance: -$4,400
         </div>
         <div class="collapse-content">
             <div class="overflow-y-auto">
@@ -161,7 +161,7 @@
 <div class="flex justify-center py-6 px-32">
     <div tabindex="0" class="collapse bg-base-300">
         <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
-            Coinsquare - Investment #2240
+            Coinsquare - Investment #2240    |   Balance: $26,567
         </div>
         <div class="collapse-content">
             <div class="overflow-y-auto">
@@ -192,7 +192,7 @@
 <div class="flex justify-center py-6 px-32 mb-16">
     <div tabindex="0" class="collapse bg-base-300">
         <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
-            Questrade - Investment #4207
+            Questrade - Investment #4207    |   Balance: $160,756
         </div>
         <div class="collapse-content">
             <div class="overflow-y-auto">
