--- a/investments.html
+++ b/investments.html
@@ -135,7 +135,7 @@
 
 
         <!-- Chat -->
-        <button id="chatButton" onclick="toggleChat()" class="bg-red-600 hover:bg-red-300 text-white font-bold py-2 px-4 rounded-full fixed bottom-16 right-4 z-50">
+        <button id="chatButton" onclick="toggleChat()" class="bg-red-600 hover:text-black text-white font-bold py-2 px-4 rounded-full fixed bottom-16 right-4 z-50">
             Chat
         </button>
     
@@ -145,10 +145,10 @@
             </div>
             <div class="border-t p-4">
                 <input type="text" id="messageInput" class="border rounded w-full p-2" placeholder="Type a message...">
-                <button onclick="sendMessage()" class="bg-red-600 hover:bg-red-300 text-white font-bold py-2 px-4 rounded block mt-2 w-full">
+                <button onclick="sendMessage()" class="bg-red-600 hover:text-black text-white font-bold py-2 px-4 rounded block mt-2 w-full">
                     Send
                 </button>
-                <button onclick="toggleChat()" class="bg-red-500 hover: bg-red-300 text-white font-bold py-1 px-2 rounded-full absolute top-2 right-2">
+                <button onclick="toggleChat()" class="bg-red-500 hover:text-black text-white font-bold py-1 px-2 rounded-full absolute top-2 right-2">
                     close
                 </button>
             </div>
